--- a/05_TEMPLATE_ENGINE/04_condicionais/views/home.handlebars
+++ b/05_TEMPLATE_ENGINE/04_condicionais/views/home.handlebars
@@ -7,4 +7,8 @@
     <a href="/dashboard">Clique aqui</a>
     para acessar área de membros
   </p>
+{{else}}
+  <p>
+    Ops! Parece que houve algum erro na sua autenticação.
+  </p>
 {{/if}}
